@@ -55,6 +55,12 @@
 #' for the distance and angle covariates (e.g., 'center1.dist', 'center1.angle', 'center2.dist', 'center2.angle'); otherwise the covariate names are derived from the row names
 #' of \code{centers} as \code{paste0(rep(rownames(centers),each=2),c(".dist",".angle"))}. Note that the angle covariates for each activity center are calculated relative to 
 #' the previous movement direction instead of standard directions relative to the x-axis; this is to allow turning angles to be simulated as a function of these covariates using circular-circular regression.
+#' @param centroids List where each element is a \code{max(unlist(obsPerAnimal))} x 2 matrix providing the x-coordinates (column 1) and y-coordinates (column 2) for centroids (i.e., dynamic activity centers where the coordinates can change for each time step)
+#' from which distance and angle covariates will be calculated based on the simulated location data. These distance and angle 
+#' covariates can be included in \code{formula} and \code{DM} using the names of \code{centroids}.  If no list names are provided, then generic names are generated 
+#' for the distance and angle covariates (e.g., 'centroid1.dist', 'centroid1.angle', 'centroid2.dist', 'centroid2.angle'); otherwise the covariate names are derived from the list names
+#' of \code{centroids} as \code{paste0(rep(names(centroids),each=2),c(".dist",".angle"))}. Note that the angle covariates for each centroid are calculated relative to 
+#' the previous movement direction instead of standard directions relative to the x-axis; this is to allow turning angles to be simulated as a function of these covariates using circular-circular regression.
 #' @param obsPerAnimal Either the number of the number of observations per animal (if single value) or the bounds of the number of observations per animal (if vector of two values). In the latter case, 
 #' the numbers of obervations generated for each animal are uniformously picked from this interval. Alternatively, \code{obsPerAnimal} can be specified as
 #' a list of length \code{nbAnimals} with each element providing the number of observations (if single value) or the bounds (if vector of two values) for each individual.
@@ -89,7 +95,7 @@
 #' @param model A \code{\link{momentuHMM}}, \code{\link{miHMM}}, or \code{\link{miSum}} object. This option can be used to simulate from a fitted model.  Default: NULL.
 #' Note that, if this argument is specified, most other arguments will be ignored -- except for \code{nbAnimals},
 #' \code{obsPerAnimal}, \code{states}, \code{initialPosition}, \code{lambda}, \code{errorEllipse}, and, if covariate values different from those in the data should be specified, 
-#' \code{covs}, \code{spatialCovs}, and \code{centers}.
+#' \code{covs}, \code{spatialCovs}, \code{centers}, and \code{centroids}.
 #' @param states \code{TRUE} if the simulated states should be returned, \code{FALSE} otherwise (default).
 #' @param retrySims Number of times to attempt to simulate data within the spatial extent of \code{spatialCovs}. If \code{retrySims=0} (the default), an
 #' error is returned if the simulated tracks(s) move beyond the extent(s) of the raster layer(s). Instead of relying on \code{retrySims}, in many cases
@@ -329,6 +335,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
                     oneInflation=NULL,
                     circularAngleMean=NULL,
                     centers=NULL,
+                    centroids=NULL,
                     obsPerAnimal=c(500,1500),
                     initialPosition=c(0,0),
                     DM=NULL,cons=NULL,userBounds=NULL,workcons=NULL,stateNames=NULL,
@@ -461,7 +468,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
     if(!all(distnames %in% names(Par))) stop(distnames[which(!(distnames %in% names(Par)))]," is missing in 'Par'")
     Par <- Par[distnames]
     
-    mHind <- (is.null(DM) & is.null(userBounds) & is.null(spatialCovs) & is.null(centers) & ("step" %in% names(dist)) & all(initialPosition==c(0,0)) & is.null(lambda) & is.null(errorEllipse) & !is.list(obsPerAnimal) & is.null(covs) & !nbCovs & !length(attr(terms.formula(formula),"term.labels")) & !length(attr(terms.formula(formulaDelta),"term.labels")) & is.null(delta)) # indicator for moveHMM::simData
+    mHind <- (is.null(DM) & is.null(userBounds) & is.null(spatialCovs) & is.null(centers) & is.null(centroids) & ("step" %in% names(dist)) & all(initialPosition==c(0,0)) & is.null(lambda) & is.null(errorEllipse) & !is.list(obsPerAnimal) & is.null(covs) & !nbCovs & !length(attr(terms.formula(formula),"term.labels")) & !length(attr(terms.formula(formulaDelta),"term.labels")) & is.null(delta)) # indicator for moveHMM::simData
     if(all(names(dist) %in% c("step","angle")) & mHind){
       zi <- FALSE
       if(!is.null(zeroInflation$step)) zi <- zeroInflation$step
@@ -652,6 +659,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
   
   centerInd<-NULL
   if(!is.null(centers)){
+    if(!is.matrix(centers)) stop("centers must be a matrix")
     if(dim(centers)[2]!=2) stop("centers must be a matrix consisting of 2 columns (i.e., x- and y-coordinates)")
     centerInd <- which(!apply(centers,1,function(x) any(is.na(x))))
     if(length(centerInd)){
@@ -660,6 +668,24 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
       centerCovs <- data.frame(matrix(NA,nrow=sum(allNbObs),ncol=length(centerInd)*2,dimnames=list(NULL,centerNames)))
     }  
   } else centerNames <- NULL
+  
+  centroidInd<-NULL
+  if(!is.null(centroids)){
+    if(!is.list(centroids)) stop("centroids must be a named list")
+    centroidNames <- character()
+    for(j in 1:length(centroids)){
+      if(!is.matrix(centroids[[j]])) stop("each element of centroids must be a matrix")
+      if(dim(centroids[[j]])[1]<max(unlist(obsPerAnimal)) | dim(centroids[[j]])[2]!=2) stop("each element of centroids must be a matrix consisting of at least",max(unlist(obsPerAnimal)),"rows (i.e., the maximum number of observations per animal) and 2 columns (i.e., x- and y-coordinates)")
+      #centroidInd <- which(!apply(centroids[[j]],1,function(x) any(is.na(x))))
+      #if(length(centroidInd)){
+      if(any(is.na(centroids[[j]]))) stop("centroids cannot contain missing values")
+      if(is.null(names(centroids[j]))) centroidNames<-paste0("centroid",rep(centroidInd,each=2),".",c("dist","angle"))
+      else centroidNames <- c(centroidNames,paste0(rep(names(centroids[j]),each=2),".",c("dist","angle")))
+    }
+    centroidCovs <- data.frame(matrix(NA,nrow=sum(allNbObs),ncol=length(centroidNames),dimnames=list(NULL,centroidNames)))
+    centroidInd <- length(centroidNames)/2
+      #}  
+  } else centroidNames <- NULL
   
   if(!is.null(model) & length(centerInd)){
     cInd <- which(!(colnames(allCovs) %in% centerNames))
@@ -671,6 +697,17 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
       nbCovs <- 0
     }
   } else if(any(colnames(allCovs) %in% centerNames)) stop("centers name(s) cannot match other covariate name(s)")
+  
+  if(!is.null(model) & length(centroidInd)){
+    cInd <- which(!(colnames(allCovs) %in% centroidNames))
+    if(length(cInd)) {
+      allCovs <- allCovs[,cInd,drop=FALSE]
+      nbCovs <- ncol(allCovs)
+    } else {
+      allCovs <- NULL
+      nbCovs <- 0
+    }
+  } else if(any(colnames(allCovs) %in% centroidNames)) stop("centroids name(s) cannot match other covariate name(s)")
   
   allNbCovs <- nbCovs+nbSpatialCovs
 
@@ -704,7 +741,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
         data$x<-numeric()
         data$y<-numeric()
       }    
-  } else if(nbSpatialCovs | length(centerInd)) stop("spatialCovs and/or centers cannot be specified without valid step length and turning angle distributions")
+  } else if(nbSpatialCovs | length(centerInd) | length(centroidInd)) stop("spatialCovs, centers, and/or centroids cannot be specified without valid step length and turning angle distributions")
   
   #if(is.null(formula)) {
   #  if(allNbCovs) formula <- formula(paste0("~",paste0(c(colnames(allCovs),spatialcovnames),collapse="+")))
@@ -729,10 +766,10 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
   message("=======================================================================")
   
   if(length(all.vars(formula)))
-    if(!all(all.vars(formula) %in% c("ID",names(allCovs),centerNames,spatialcovnames)))
+    if(!all(all.vars(formula) %in% c("ID",names(allCovs),centerNames,centroidNames,spatialcovnames)))
       stop("'formula' covariate(s) not found")
   if(length(all.vars(formulaDelta)))
-    if(!all(all.vars(formulaDelta) %in% c("ID",names(allCovs),centerNames,spatialcovnames)))
+    if(!all(all.vars(formulaDelta) %in% c("ID",names(allCovs),centerNames,centroidNames,spatialcovnames)))
       stop("'formulaDelta' covariate(s) not found")
   if(("ID" %in% all.vars(formula) | "ID" %in% all.vars(formulaDelta)) & nbAnimals<2) stop("ID cannot be a covariate when nbAnimals=1")
   
@@ -775,6 +812,13 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
       tmpDistAngle <- distAngle(initialPosition,initialPosition,centers[centerInd[j],])
       tmpCovs[[centerNames[(j-1)*2+1]]]<- tmpDistAngle[1]
       tmpCovs[[centerNames[(j-1)*2+2]]]<- tmpDistAngle[2]
+    }
+  }
+  if(length(centroidInd)){
+    for(j in 1:length(centroidInd)){
+      tmpDistAngle <- distAngle(initialPosition,initialPosition,centroids[[j]][1,])
+      tmpCovs[[centroidNames[(j-1)*2+1]]]<- tmpDistAngle[1]
+      tmpCovs[[centroidNames[(j-1)*2+2]]]<- tmpDistAngle[2]
     }
   }
   nbBetaCovs <- ncol(model.matrix(newformula,tmpCovs))
@@ -837,6 +881,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
         subCovs <- cbind(subCovs,data.frame(allCovs[ind1:ind2,,drop=FALSE]))
       }
       if(length(centerInd)) subCovs <- cbind(subCovs,centerCovs[cumNbObs[zoo]+1:nbObs,])
+      if(length(centroidInd)) subCovs <- cbind(subCovs,centroidCovs[cumNbObs[zoo]+1:nbObs,])
       
       subSpatialcovs<-as.data.frame(matrix(NA,nrow=nbObs,ncol=nbSpatialCovs))
       colnames(subSpatialcovs)<-spatialcovnames
@@ -860,7 +905,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
       
       gamma <- diag(nbStates)
       
-      if(!nbSpatialCovs & !length(centerInd)) {
+      if(!nbSpatialCovs & !length(centerInd) & !length(centroidInd)) {
         DMcov <- model.matrix(newformula,subCovs)
         gFull <-  DMcov %*% beta
         
@@ -894,6 +939,12 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
             subCovs[1,centerNames[(j-1)*2+1:2]]<-distAngle(X[1,],X[1,],centers[centerInd[j],])
           }
         }
+        
+        if(length(centroidInd)){
+          for(j in 1:length(centroidInd)){
+            subCovs[1,centroidNames[(j-1)*2+1:2]]<-distAngle(X[1,],X[1,],centroids[[j]][1,])
+          }
+        }
         g <- model.matrix(newformula,cbind(subCovs[1,,drop=FALSE],subSpatialcovs[1,,drop=FALSE])) %*% beta
         covsDelta <- model.matrix(formulaDelta,cbind(subCovs[1,,drop=FALSE],subSpatialcovs[1,,drop=FALSE]))
         delta <- c(rep(0,nbCovsDelta+1),deltaB)
@@ -917,7 +968,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
       
       for (k in 1:(nbObs-1)){
         
-        if(nbSpatialCovs |  length(centerInd)){
+        if(nbSpatialCovs |  length(centerInd) | length(centroidInd)){
           # format parameters
           DMinputs<-getDM(cbind(subCovs[k,,drop=FALSE],subSpatialcovs[k,,drop=FALSE]),inputs$DM,dist,nbStates,p$parNames,p$bounds,Par,cons,workcons,zeroInflation,oneInflation,inputs$circularAngleMean)
           fullDM <- DMinputs$fullDM
@@ -987,7 +1038,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
         }
         # get next state
         gamma <- diag(nbStates)
-        if(nbSpatialCovs | length(centerInd)){
+        if(nbSpatialCovs | length(centerInd) | length(centroidInd)){
           if(nbSpatialCovs){
             for(j in 1:nbSpatialCovs){
               getCell<-raster::cellFromXY(spatialCovs[[j]],c(X[k+1,1],X[k+1,2]))
@@ -998,6 +1049,11 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
           if(length(centerInd)){
             for(j in 1:length(centerInd)){
               subCovs[k+1,centerNames[(j-1)*2+1:2]]<-distAngle(X[k,],X[k+1,],centers[centerInd[j],])
+            }
+          }
+          if(length(centroidInd)){
+            for(j in 1:length(centroidInd)){
+              subCovs[k+1,centroidNames[(j-1)*2+1:2]]<-distAngle(X[k,],X[k+1,],centroids[[j]][k+1,])
             }
           }
           g <- model.matrix(newformula,cbind(subCovs[k+1,,drop=FALSE],subSpatialcovs[k+1,,drop=FALSE])) %*% beta
@@ -1031,6 +1087,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
         }    
       }
       if(length(centerInd)) centerCovs[cumNbObs[zoo]+1:nbObs,] <- subCovs[,centerNames]
+      if(length(centroidInd)) centroidCovs[cumNbObs[zoo]+1:nbObs,] <- subCovs[,centroidNames]
       data <- rbind(data,d)
     }
     
@@ -1046,6 +1103,14 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
       data <- cbind(data,centerCovs)
       for(j in which(grepl(".angle",names(data)))){
         if(names(data[j]) %in% centerNames)
+          class(data[[j]]) <- c(class(data[[j]]), "angle")
+      }
+    }
+    
+    if(length(centroidInd)){
+      data <- cbind(data,centroidCovs)
+      for(j in which(grepl(".angle",names(data)))){
+        if(names(data[j]) %in% centroidNames)
           class(data[[j]]) <- c(class(data[[j]]), "angle")
       }
     }
@@ -1078,6 +1143,7 @@ simData <- function(nbAnimals=1,nbStates=2,dist,
                           oneInflation,
                           circularAngleMean,
                           centers,
+                          centroids,
                           obsPerAnimal,
                           initialPosition,
                           DM,cons,userBounds,workcons,stateNames,
