@@ -8,10 +8,10 @@ simData(nbAnimals = 1, nbStates = 2, dist, Par, beta = NULL,
   delta = NULL, formula = ~1, formulaDelta = ~1, covs = NULL,
   nbCovs = 0, spatialCovs = NULL, zeroInflation = NULL,
   oneInflation = NULL, circularAngleMean = NULL, centers = NULL,
-  obsPerAnimal = c(500, 1500), initialPosition = c(0, 0), DM = NULL,
-  cons = NULL, userBounds = NULL, workcons = NULL, stateNames = NULL,
-  model = NULL, states = FALSE, retrySims = 0, lambda = NULL,
-  errorEllipse = NULL)
+  centroids = NULL, obsPerAnimal = c(500, 1500), initialPosition = c(0,
+  0), DM = NULL, cons = NULL, userBounds = NULL, workcons = NULL,
+  stateNames = NULL, model = NULL, states = FALSE, retrySims = 0,
+  lambda = NULL, errorEllipse = NULL)
 }
 \arguments{
 \item{nbAnimals}{Number of observed individuals to simulate.}
@@ -79,6 +79,13 @@ centers of attraction or repulsion) from which distance and angle covariates wil
 covariates can be included in \code{formula} and \code{DM} using the row names of \code{centers}.  If no row names are provided, then generic names are generated 
 for the distance and angle covariates (e.g., 'center1.dist', 'center1.angle', 'center2.dist', 'center2.angle'); otherwise the covariate names are derived from the row names
 of \code{centers} as \code{paste0(rep(rownames(centers),each=2),c(".dist",".angle"))}. Note that the angle covariates for each activity center are calculated relative to 
+the previous movement direction instead of standard directions relative to the x-axis; this is to allow turning angles to be simulated as a function of these covariates using circular-circular regression.}
+
+\item{centroids}{List where each element is a \code{max(unlist(obsPerAnimal))} x 2 matrix providing the x-coordinates (column 1) and y-coordinates (column 2) for centroids (i.e., dynamic activity centers where the coordinates can change for each time step)
+from which distance and angle covariates will be calculated based on the simulated location data. These distance and angle 
+covariates can be included in \code{formula} and \code{DM} using the names of \code{centroids}.  If no list names are provided, then generic names are generated 
+for the distance and angle covariates (e.g., 'centroid1.dist', 'centroid1.angle', 'centroid2.dist', 'centroid2.angle'); otherwise the covariate names are derived from the list names
+of \code{centroids} as \code{paste0(rep(names(centroids),each=2),c(".dist",".angle"))}. Note that the angle covariates for each centroid are calculated relative to 
 the previous movement direction instead of standard directions relative to the x-axis; this is to allow turning angles to be simulated as a function of these covariates using circular-circular regression.}
 
 \item{obsPerAnimal}{Either the number of the number of observations per animal (if single value) or the bounds of the number of observations per animal (if vector of two values). In the latter case, 
